objects/copado__User_Story__c.object
<CustomObject>
    <fields>
        <fullName>copado__Metadata_Types_in_Selection__c</fullName>
        <description>Metadata types of the components listed in the User Story Selections. This value is updated automatically by Copado.</description>
        <label>Metadata Types in Selection</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ActionLinkGroupTemplate</fullName>
                </value>
                <value>
                    <fullName>AnalyticSnapshot</fullName>
                </value>
                <value>
                    <fullName>ApexClass</fullName>
                </value>
                <value>
                    <fullName>ApexComponent</fullName>
                </value>
                <value>
                    <fullName>ApexPage</fullName>
                </value>
                <value>
                    <fullName>ApexTrigger</fullName>
                </value>
                <value>
                    <fullName>AppMenu</fullName>
                </value>
                <value>
                    <fullName>ApprovalProcess</fullName>
                </value>
                <value>
                    <fullName>AssignmentRule</fullName>
                </value>
                <value>
                    <fullName>AssignmentRules</fullName>
                </value>
                <value>
                    <fullName>AuraDefinitionBundle</fullName>
                </value>
                <value>
                    <fullName>AuthProvider</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRule</fullName>
                </value>
                <value>
                    <fullName>AutoResponseRules</fullName>
                </value>
                <value>
                    <fullName>BusinessProcess</fullName>
                </value>
                <value>
                    <fullName>CallCenter</fullName>
                </value>
                <value>
                    <fullName>Certificate</fullName>
                </value>
                <value>
                    <fullName>ChannelLayout</fullName>
                </value>
                <value>
                    <fullName>Community</fullName>
                </value>
                <value>
                    <fullName>CompactLayout</fullName>
                </value>
                <value>
                    <fullName>ConnectedApp</fullName>
                </value>
                <value>
                    <fullName>CorsWhitelistOrigin</fullName>
                </value>
                <value>
                    <fullName>CustomApplication</fullName>
                </value>
                <value>
                    <fullName>CustomField</fullName>
                </value>
                <value>
                    <fullName>CustomLabel</fullName>
                </value>
                <value>
                    <fullName>CustomLabels</fullName>
                </value>
                <value>
                    <fullName>CustomMetadata</fullName>
                </value>
                <value>
                    <fullName>CustomObject</fullName>
                </value>
                <value>
                    <fullName>CustomObjectTranslation</fullName>
                </value>
                <value>
                    <fullName>CustomPageWebLink</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Minimum_Apex_Code_Coverage__c</fullName>
        <defaultValue>0.75</defaultValue>
        <description>Minimum Apex Code Coverage required. If this value is lower than the value set in the User Story&apos;s Environment, the Environment&apos;s value will be automatically applied.</description>
        <label>Minimum Apex Code Coverage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Order__c</fullName>
        <label>Order</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Org_Credential__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Credential used to add or commit metadata and to promote and deploy the User Story to the next Environment.</description>
        <label>Credential</label>
        <referenceTo>copado__Org__c</referenceTo>
        <relationshipLabel>User Stories (Credential)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Parent_Epic_Title__c</fullName>
        <formula>copado__Epic__r.copado__Epic_Title__c</formula>
        <label>Parent Epic Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Planned_Points_Other__c</fullName>
        <inlineHelpText>Use this field to split your User Story effort estimation among different scopes. Example: Dev and QA, Frontend and Backend. You can label this field to match your scope.</inlineHelpText>
        <label>Planned Points Other</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Platform__c</fullName>
        <description>This field auto-populates and displays the pipeline platform</description>
        <formula>BLANKVALUE( 
    TEXT(copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c) ,  
    BLANKVALUE(  
        TEXT(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Platform__c), 
        &apos;&apos;
    ) 
)</formula>
        <inlineHelpText>This field auto-populates and displays the pipeline platform</inlineHelpText>
        <label>Platform</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Priority__c</fullName>
        <description>Numeric value to determine which User Stories are more urgent and should be completed first.</description>
        <label>Priority</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Progress_Status__c</fullName>
        <formula>IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;&quot;, 1, 0) &amp;
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;Completed&quot;, 15, (copado__Progress__c*100) * 2) &amp;
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;white&quot;, 15,
200 - ((copado__Progress__c*100)* 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Progress Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Progress__c</fullName>
        <label>Progress</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>copado__Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project where the User Story belongs.</description>
        <label>Project</label>
        <referenceTo>copado__Project__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Promote_Change__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User Story is marked as ready to be promoted. The user story will appear as &apos;Ahead&apos; and available to be selected in the Branch Management and Promotion pages.</description>
        <label>Ready to Promote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promote_and_Deploy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When this checkbox is checked, a promotion and deployment of this User Story will be started.</inlineHelpText>
        <label>Promote and Deploy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promote_as_Single_Step__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Promote as Single Step</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Promotion_Test_Level__c</fullName>
        <description>Test Level to apply in the deployment of the User Story.</description>
        <label>Promotion Test Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NoTestRun</fullName>
                    <default>true</default>
                    <label>NoTestRun</label>
                </value>
                <value>
                    <fullName>RunSpecifiedTests</fullName>
                </value>
                <value>
                    <fullName>RunLocalTests</fullName>
                </value>
                <value>
                    <fullName>RunAllTestsInOrg</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Pull_Requests_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pull Requests Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__QR_Code__c</fullName>
        <formula>IMAGE(&apos;https://chart.googleapis.com/chart?chs=150x150&amp;cht=qr&amp;chl=&apos;+
  SUBSTITUTE(LEFT($Api.Partner_Server_URL_310, 
    FIND( &apos;/services&apos;, $Api.Partner_Server_URL_310)
  )+Id, 
    &apos;https://&apos;, 
    &apos;https%3A%2F%2F&apos;
  ),
&apos;Scan the QR code to create contact in your mobile&apos; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QR Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Release__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Product version or release where this User Story will be released.</description>
        <label>Release</label>
        <referenceTo>copado__Release__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Sprint where the User Story is planned.</description>
        <label>Sprint</label>
        <referenceTo>copado__Sprint__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Status__c</fullName>
        <description>Current status of the implementation of the User Story.</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Ready for Design</fullName>
                </value>
                <value>
                    <fullName>Design In Progress</fullName>
                </value>
                <value>
                    <fullName>Design Blocked</fullName>
                </value>
                <value>
                    <fullName>Ready for Planning</fullName>
                </value>
                <value>
                    <fullName>Planning in Progress</fullName>
                </value>
                <value>
                    <fullName>Planning Blocked</fullName>
                </value>
                <value>
                    <fullName>Ready for Investigation</fullName>
                </value>
                <value>
                    <fullName>Investigation in Progress</fullName>
                </value>
                <value>
                    <fullName>Investigation Blocked</fullName>
                </value>
                <value>
                    <fullName>Ready for Development</fullName>
                </value>
                <value>
                    <fullName>Development In Progress</fullName>
                </value>
                <value>
                    <fullName>Development Blocked</fullName>
                </value>
                <value>
                    <fullName>Waiting for customer</fullName>
                </value>
                <value>
                    <fullName>Ready for Tech. Review</fullName>
                </value>
                <value>
                    <fullName>Tech. Review in Progress</fullName>
                </value>
                <value>
                    <fullName>Tech. Review Blocked</fullName>
                </value>
                <value>
                    <fullName>Ready for QA DEV Testing</fullName>
                </value>
                <value>
                    <fullName>QA DEV Testing In Progress</fullName>
                </value>
                <value>
                    <fullName>QA DEV Testing Blocked</fullName>
                </value>
                <value>
                    <fullName>QA DEV Testing Completed</fullName>
                </value>
                <value>
                    <fullName>Ready for QA UAT Testing</fullName>
                </value>
                <value>
                    <fullName>QA UAT Testing In Progress</fullName>
                </value>
                <value>
                    <fullName>QA UAT Testing Blocked</fullName>
                </value>
                <value>
                    <fullName>Ready for Testing</fullName>
                </value>
                <value>
                    <fullName>Testing in Progress</fullName>
                </value>
                <value>
                    <fullName>Testing Blocked</fullName>
                </value>
                <value>
                    <fullName>Ready for Packaging</fullName>
                </value>
                <value>
                    <fullName>Packaging in Progress</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>copado__Stop_Indexing_Metadata__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, the User Story will not be indexed for Copado&apos;s Overlap Awareness.</description>
        <inlineHelpText>Check to Stop Indexing Metadata in Copado&apos;s Overlap Awareness.</inlineHelpText>
        <label>Stop Indexing Metadata</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_Other__c</fullName>
        <inlineHelpText>The estimated effort your team plans to allocate on implementing, reviewing, testing, and documenting the User Story. 
1 point = The smallest US you can think of / 
2 points = ½ day / 
3 points = 1 day / 
5 points = 2-3 days / 
8 points = 1 week / 
13 points = 8 days / 
21 points = 15 days</inlineHelpText>
        <label>Planned Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Story_Points_SFDC__c</fullName>
        <inlineHelpText>The actual effort the team put into the implementation, reviews, testing, and documentation of the User Story.
1 point = The smallest US you can think of / 
2 points = ½ day / 
3 points = 1 day / 
5 points = 2-3 days / 
8 points = 1 week / 
13 points = 8 days / 
21 points = 15 days</inlineHelpText>
        <label>Actual Points</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Team which will tackle the User Story.</description>
        <label>Team</label>
        <referenceTo>copado__Team__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Technical_Specifications__c</fullName>
        <label>Technical Specifications</label>
        <length>30000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>copado__Test_Script_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Test Script Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>User Stories (Test Script Owner)</relationshipLabel>
        <relationshipName>User_Stories_TestScriptOwner</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Theme__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within one sprint.</description>
        <inlineHelpText>A theme is a group of user stories which contribute to a common goal. It is the highest level of the user story hierarchy. On the other hand, an epic is a big user story that has to be divided into several user stories because it can&apos;t be completed within</inlineHelpText>
        <label>Theme</label>
        <referenceTo>copado__Theme__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__Total_Actual_Points__c</fullName>
        <formula>copado__Story_Points_SFDC__c + copado__Actual_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Actual Points and Actual Points Other. Use this field along with Actual Points Other if you need to split your User Story effort among different scopes.</inlineHelpText>
        <label>Total Actual Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Total_Story_Points__c</fullName>
        <formula>copado__Story_Points_Other__c + copado__Planned_Points_Other__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Sum of Planned Points and Planned Points Other. Use this field along with Planned Points Other if you need to split your User Story effort estimation among different scopes.</inlineHelpText>
        <label>Total Planned Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__Triggers_Without_Coverage__c</fullName>
        <description>Number of triggers without the minimum required coverage.</description>
        <label>Triggers Without Coverage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copado__US_Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>copado__Application_Feature__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copado__User_Story_Title__c</fullName>
        <description>Short description of the User Story or requirement. Technical and non-technical team members should be able to understand the description.</description>
        <label>User Story Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Validate_Only__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This will create a validation deployment.  When checked, Git metadata and regular metadata will be merged to create 1 validation deployment.</inlineHelpText>
        <label>Validate Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__View_in_Git__c</fullName>
        <description>Link to the User Story feature branch in Git. The link is generated based on the Base Branch URL of the Git Repository record.</description>
        <formula>HYPERLINK(
	IF(
		AND(
			NOT(ISNULL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		IF(
		AND(
			NOT(ISNULL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c )), copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c != &apos;&apos;
		),
		IF(
			AND(NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c,&apos;&apos;)),NOT(ISPICKVAL(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Git_Provider__c, &apos;Others&apos;))),
			copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name ,
			IF(
				CONTAINS(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;),
				SUBSTITUTE(copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c,&apos;[BRANCH_NAME]&apos;,&apos;feature/&apos; + Name),
				copado__Release__r.copado__Project__r.copado__Deployment_Flow__r.copado__Git_Repository__r.copado__Branch_Base_URL__c + &apos;feature/&apos; + Name
			)
		),
		&apos;&apos;
	)
	),
	&apos;feature/&apos; + Name
)</formula>
        <label>View in Git</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__userStory_Role__c</fullName>
        <label>As a...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_need__c</fullName>
        <label>Want to...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copado__userStory_reason__c</fullName>
        <label>So that...</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>copadoccmint__Enable_Logs__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Logs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadoccmint__External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadoccmint__JIRA_key__c</fullName>
        <label>JIRA key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>copadometrics__Business_Disruption_Failure__c</fullName>
        <formula>IF(OR(TEXT(copadometrics__Severity__c) == &apos;P0 - Blocker - Business Disruption&apos;, TEXT(copadometrics__Severity__c) == &apos;P1 - Critical - No Workaround&apos;), true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Business Disruption Failure?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadometrics__Development_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Development Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve__c</fullName>
        <formula>TEXT(IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(NOW() - CreatedDate)
,
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)
))

&amp; &quot; days &quot; &amp;

TEXT(IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(MOD((NOW() - CreatedDate)*24, 24))
,
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*24, 24))
))
 
&amp; &quot; hours &quot; &amp; 

TEXT(IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
ROUND(MOD((NOW() - CreatedDate)*1440, 60), 0)
,
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*1440, 60), 0)
)) &amp; &quot; minutes&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_days__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(NOW() - CreatedDate)
,
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_hours__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
FLOOR(MOD((NOW() - CreatedDate)*24, 24))
,
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*24, 24))
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Elapsed_Time_to_Resolve_minutes__c</fullName>
        <formula>IF(
ISBLANK(copadometrics__First_Time_Promoted_to_Production__c),
ROUND(MOD((NOW() - CreatedDate)*1440, 60), 0)
,
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - CreatedDate)*1440, 60), 0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Elapsed Time to Resolve (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__First_Ready_to_Promote_Time__c</fullName>
        <label>First Ready to Promote Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadometrics__First_Time_Promoted_to_Production__c</fullName>
        <label>First Time Promoted to Production</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>copadometrics__Found_in_Promotion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Found in Promotion</label>
        <referenceTo>copado__Promotion__c</referenceTo>
        <relationshipLabel>User Stories (Found in Promotion)</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time__c</fullName>
        <formula>TEXT(IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)
,
0)) 
&amp; &quot; days &quot; &amp; 


TEXT(IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*24, 24))
,
0)) &amp; &quot; hours &quot; &amp; 


TEXT(IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*1440, 60), 0)
,
0))  &amp; &quot; minutes &quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_days__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_hours__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
FLOOR(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*24, 24))
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (hours)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Lead_Time_minutes__c</fullName>
        <formula>IF(
AND(NOT(ISBLANK(copadometrics__First_Time_Promoted_to_Production__c)), NOT(ISBLANK(copadometrics__First_Ready_to_Promote_Time__c))),
ROUND(MOD((copadometrics__First_Time_Promoted_to_Production__c - copadometrics__First_Ready_to_Promote_Time__c)*1440, 60), 0)
,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead Time (minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>copadometrics__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>P0 - Blocker - Business Disruption</fullName>
                </value>
                <value>
                    <fullName>P1 - Critical - No Workaround</fullName>
                </value>
                <value>
                    <fullName>P2 - Major</fullName>
                </value>
                <value>
                    <fullName>P3 - Minor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>User Story</label>
    <listViews>
        <fullName>APO_Pending_User_Stories</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>copado__Status__c</columns>
        <columns>copado__Priority__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>copado__Team__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>copado__Exclude_From_CBM__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__User_Story__c.APO_User_Story</value>
        </filters>
        <label>APO Pending User Stories</label>
    </listViews>
    <listViews>
        <fullName>APO_Release_Team_User_Stories</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Parent_Epic_Title__c</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Environment__c</columns>
        <columns>copado__Latest_Commit_Date__c</columns>
        <columns>copado__Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>copado__User_Story__c.APO_User_Story</value>
        </filters>
        <filters>
            <field>copado__Status__c</field>
            <operation>notEqual</operation>
            <value>Released,Completed,Cancelled,Done</value>
        </filters>
        <label>APO Release Team - User Stories</label>
        <sharedTo>
            <group>APO_Release_Team</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Active_Active_Migration_Kanban</fullName>
        <columns>NAME</columns>
        <columns>copado__User_Story_Title__c</columns>
        <columns>copado__Developer__c</columns>
        <columns>copado__Close_Date__c</columns>
        <columns>copado__Project__c</columns>
        <columns>copado__Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>copado__Project__c</field>
            <operation>equals</operation>
            <value>Active/Active Regional Failover Migration</value>
        </filters>
        <label>Active/Active Migration Kanban</label>
    </listViews>
</CustomObject>